@@ -31,6 +31,9 @@ Trunk (unreleased changes)
     HDFS-512. Block.equals() and compareTo() compare blocks based
     only on block Ids, ignoring generation stamps. (shv)
 
+    HDFS-873. Configuration specifies data-node storage directories as URIs.
+    (shv)
+
   NEW FEATURES
 
     HDFS-436. Introduce AspectJ framework for HDFS code and tests.
